--- a/ui/dashboard/src/app/main/dashboard/dashboard.component.html
+++ b/ui/dashboard/src/app/main/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <div class="row flex-container" [dragula]='"first-bag"' [dragulaOptions]="{removeOnSpill: true}"
+    <div class="row flex-container dragula" [dragula]='"first-bag"' [dragulaOptions]="{removeOnSpill: true}"
          [dragulaModel]='firstCol'>
       <div *ngFor="let stream of firstCol" class="col-md-12">
         <my-stream [stream]="stream"></my-stream>
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="col-md-6">
-    <div class="row flex-container" [dragula]='"first-bag"' [dragulaOptions]="{removeOnSpill: true}"
+    <div class="row flex-container dragula" [dragula]='"first-bag"' [dragulaOptions]="{removeOnSpill: true}"
          [dragulaModel]='secondCol'>
       <div *ngFor="let stream of secondCol" class="col-md-12">
         <my-stream [stream]="stream"></my-stream>
